--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
             <div class="col-sm-4">
                 <p>
-                    Not many people are bold to reach out for help in conversations regarding their mental health
+                    Not many actually reach out for help in conversations regarding their mental health
                     because they do not want to be judged by the society. There appears to be no sympathy for such
                     causes.
                     Such people do not want to be seen
